--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@azure/arm-azurestack": "^2.1.1",
+    "@azure/identity": "^4.4.1",
     "@azure/storage-blob": "^12.24.0"
   }
 }
